--- a/for Practice/DataScienceBook_DS/시계열.ipynb
+++ b/for Practice/DataScienceBook_DS/시계열.ipynb
@@ -82,6 +82,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array('2022-05-01', dtype='datetime64[D]')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## numpy로!\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "date = np.array('2022-05-01', dtype=np.datetime64)\n",
+    "date # 이제 연산이 빨라짐   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-05-13\n",
+      "['2022-05-01' '2022-05-02' '2022-05-03' '2022-05-04' '2022-05-05'\n",
+      " '2022-05-06' '2022-05-07' '2022-05-08' '2022-05-09' '2022-05-10'\n",
+      " '2022-05-11' '2022-05-12']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(date + np.array(12)) # 12일 더한거\n",
+    "print(date + np.arange(12)) # date 부터 12개 쭈욱!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
