--- a/for Practice/DataScienceBook_DS/시계열.ipynb
+++ b/for Practice/DataScienceBook_DS/시계열.ipynb
@@ -128,6 +128,351 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Monday'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "date = pd.to_datetime('4th of July, 2022')\n",
+    "date\n",
+    "date.strftime('%A')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2022-07-04', '2022-07-05', '2022-07-06', '2022-07-07',\n",
+       "               '2022-07-08', '2022-07-09', '2022-07-10', '2022-07-11',\n",
+       "               '2022-07-12', '2022-07-13', '2022-07-14', '2022-07-15'],\n",
+       "              dtype='datetime64[ns]', freq=None)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date + pd.to_timedelta(np.arange(12), 'D')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 시간으로 인덱싱 하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2014-07-04    0\n",
+       "2014-08-04    1\n",
+       "2015-07-04    2\n",
+       "2015-08-04    3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index = pd.DatetimeIndex(['2014-07-04', '2014-08-04',\n",
+    "                          '2015-07-04', '2015-08-04'])\n",
+    "data = pd.Series([0,1,2,3], index=index)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2014-08-04    1\n",
+       "2015-07-04    2\n",
+       "2015-08-04    3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[['2014-07-04', '2015-08-04']] # fancy indexing도 되지롱 \n",
+    "data['2014-08-04':'2015-08-04']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015-07-04    2\n",
+       "2015-08-04    3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['2015'] # 연도만 치면 해당 연도 다 나옴 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2015-07-03', '2015-07-04', '2015-07-06', '2015-07-07',\n",
+       "               '2015-07-08'],\n",
+       "              dtype='datetime64[ns]', freq=None)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates = pd.to_datetime([datetime(2015, 7, 3), '4th of July, 2015', \n",
+    "                        '2015-Jul-6', '07-07-2015','20150708'])\n",
+    "dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PeriodIndex(['2015-07-03', '2015-07-04', '2015-07-06', '2015-07-07',\n",
+       "             '2015-07-08'],\n",
+       "            dtype='period[D]')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates.to_period('D') # period   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TimedeltaIndex(['0 days', '1 days', '3 days', '4 days', '5 days'], dtype='timedelta64[ns]', freq=None)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates - dates[0] # TimedeltaIndex 빼주긔"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 정규시퀀스\n",
+    "타임스탬프: pd.date_range();\n",
+    "기간: pd.period_range();\n",
+    "델타: pd.timedelta_range()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2015-07-03', '2015-07-04', '2015-07-05', '2015-07-06',\n",
+       "               '2015-07-07', '2015-07-08', '2015-07-09', '2015-07-10'],\n",
+       "              dtype='datetime64[ns]', freq='D')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.date_range('2015-07-03', '2015-07-10') # == pd.date_range('2015-07-03', periods=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2015-07-03 00:00:00', '2015-07-03 01:00:00',\n",
+       "               '2015-07-03 02:00:00', '2015-07-03 03:00:00',\n",
+       "               '2015-07-03 04:00:00', '2015-07-03 05:00:00',\n",
+       "               '2015-07-03 06:00:00', '2015-07-03 07:00:00'],\n",
+       "              dtype='datetime64[ns]', freq='H')"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# periodes를 시간으로 바꿔서도 사용 가능 (default는 '일')\n",
+    "\n",
+    "pd.date_range('2015-07-03', periods=8, freq = 'H')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PeriodIndex(['2015-07', '2015-08', '2015-09', '2015-10', '2015-11', '2015-12',\n",
+       "             '2016-01', '2016-02'],\n",
+       "            dtype='period[M]')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.period_range('2015-07', periods=8, freq='M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TimedeltaIndex(['0 days 00:00:00', '0 days 01:00:00', '0 days 02:00:00',\n",
+       "                '0 days 03:00:00', '0 days 04:00:00', '0 days 05:00:00',\n",
+       "                '0 days 06:00:00', '0 days 07:00:00', '0 days 08:00:00',\n",
+       "                '0 days 09:00:00'],\n",
+       "               dtype='timedelta64[ns]', freq='H')"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.timedelta_range(0, periods=10, freq='H')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TimedeltaIndex(['0 days 00:00:00', '0 days 02:30:00', '0 days 05:00:00',\n",
+       "                '0 days 07:30:00', '0 days 10:00:00', '0 days 12:30:00',\n",
+       "                '0 days 15:00:00', '0 days 17:30:00', '0 days 20:00:00'],\n",
+       "               dtype='timedelta64[ns]', freq='150T')"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.timedelta_range(0, periods=9, freq='2H30T')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2015-07-01', '2015-07-02', '2015-07-03', '2015-07-06',\n",
+       "               '2015-07-07', '2015-07-08', '2015-07-09', '2015-07-10',\n",
+       "               '2015-07-13', '2015-07-14'],\n",
+       "              dtype='datetime64[ns]', freq='B')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 영업일 오프셋\n",
+    "from pandas.tseries.offsets import BDay\n",
+    "\n",
+    "pd.date_range('2015-07-01', periods = 10, freq=BDay()) # 영업일 기준으로 ! "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
