--- a/for Practice/DataScienceBook_DS/시계열.ipynb
+++ b/for Practice/DataScienceBook_DS/시계열.ipynb
@@ -472,6 +472,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ex. google 종가 이력 적재 + CLT (068270)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas_datareader import data\n",
+    "goog"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
