--- a/for Practice/practice_note2.ipynb
+++ b/for Practice/practice_note2.ipynb
@@ -1774,6 +1774,269 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pandas eval() , query()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "nrows, ncols = 100000, 100 \n",
+    "rng = np.random.RandomState(42)\n",
+    "df1, df2, df3, df4 = (pd.DataFrame(rng.rand(nrows,ncols))\n",
+    "                      for i in range(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "67.1 ms ± 4.53 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit df1+df2+df3+df4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70.8 ms ± 3.46 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit pd.eval(df1+df2+df3+df4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1, df2, df3, df4, df5 = (pd.DataFrame(rng.randint(0, 1000, (100,3)))\n",
+    "                           for i in range (5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result1 = -df1 * df2 / (df3+df4) - df5\n",
+    "result2 = pd.eval('-df1*df2 / (df3+df4) - df5')\n",
+    "np.allclose(result1,result2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.375506</td>\n",
+       "      <td>0.406939</td>\n",
+       "      <td>0.069938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.069087</td>\n",
+       "      <td>0.235615</td>\n",
+       "      <td>0.154374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.677945</td>\n",
+       "      <td>0.433839</td>\n",
+       "      <td>0.652324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.264038</td>\n",
+       "      <td>0.808055</td>\n",
+       "      <td>0.347197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.589161</td>\n",
+       "      <td>0.252418</td>\n",
+       "      <td>0.557789</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          A         B         C\n",
+       "0  0.375506  0.406939  0.069938\n",
+       "1  0.069087  0.235615  0.154374\n",
+       "2  0.677945  0.433839  0.652324\n",
+       "3  0.264038  0.808055  0.347197\n",
+       "4  0.589161  0.252418  0.557789"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(rng.rand(1000, 3), columns=['A','B','C'])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.375506</td>\n",
+       "      <td>0.406939</td>\n",
+       "      <td>0.069938</td>\n",
+       "      <td>11.187620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.069087</td>\n",
+       "      <td>0.235615</td>\n",
+       "      <td>0.154374</td>\n",
+       "      <td>1.973796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.677945</td>\n",
+       "      <td>0.433839</td>\n",
+       "      <td>0.652324</td>\n",
+       "      <td>1.704344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.264038</td>\n",
+       "      <td>0.808055</td>\n",
+       "      <td>0.347197</td>\n",
+       "      <td>3.087857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.589161</td>\n",
+       "      <td>0.252418</td>\n",
+       "      <td>0.557789</td>\n",
+       "      <td>1.508776</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          A         B         C          D\n",
+       "0  0.375506  0.406939  0.069938  11.187620\n",
+       "1  0.069087  0.235615  0.154374   1.973796\n",
+       "2  0.677945  0.433839  0.652324   1.704344\n",
+       "3  0.264038  0.808055  0.347197   3.087857\n",
+       "4  0.589161  0.252418  0.557789   1.508776"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.eval('D = (A+B) / C', inplace=True)\n",
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
