--- a/for Practice/practice_note3_matplot.ipynb
+++ b/for Practice/practice_note3_matplot.ipynb
@@ -2737,6 +2737,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 막대플롯"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planets = sns.load_dataset('planets')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
