--- a/for Practice/practice_note3_matplot.ipynb
+++ b/for Practice/practice_note3_matplot.ipynb
@@ -2749,6 +2749,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import seaborn as sns\n",
+    "\n",
     "planets = sns.load_dataset('planets')"
    ]
   },
