--- a/for Practice/machinelearning_prac.ipynb
+++ b/for Practice/machinelearning_prac.ipynb
@@ -673,6 +673,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'GMM' from 'sklearn.mixture' (/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/mixture/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/Users/minjoonlim/Desktop/python workspace/mjmj/for Practice/machinelearning_prac.ipynb Cell 20'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/machinelearning_prac.ipynb#ch0000019?line=0'>1</a>\u001b[0m \u001b[39m## 가우스 혼합 모델 (Gaussian mixture model)\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/machinelearning_prac.ipynb#ch0000019?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmixture\u001b[39;00m \u001b[39mimport\u001b[39;00m GMM\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/machinelearning_prac.ipynb#ch0000019?line=4'>5</a>\u001b[0m model \u001b[39m=\u001b[39m GMM(n_components \u001b[39m=\u001b[39m \u001b[39m3\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/machinelearning_prac.ipynb#ch0000019?line=5'>6</a>\u001b[0m             covariance_type \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mfull\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/machinelearning_prac.ipynb#ch0000019?line=6'>7</a>\u001b[0m model\u001b[39m.\u001b[39mfit(X_iris)\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'GMM' from 'sklearn.mixture' (/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/mixture/__init__.py)"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
