--- a/for Practice/machinelearning_prac.ipynb
+++ b/for Practice/machinelearning_prac.ipynb
@@ -688,7 +688,19 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "## holdout set (홀드아웃 검증) : training set 에서 일부 데이터를 빼서, validation set 으로 이용하여 검증"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## underfit (과소적합) --> 고편향\n",
+    "## overfit (과적합) --> 고분산 "
+   ]
   },
   {
    "cell_type": "code",
