machine learning method

--- a/for Practice/machinelearning_prac.ipynb
+++ b/for Practice/machinelearning_prac.ipynb
@@ -1701,6 +1701,419 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "455 114\n"
+     ]
+    }
+   ],
+   "source": [
+    "train, test = train_test_split(data, test_size = 0.2, random_state=2019) # random state 는 안적어도 되고, test size 0.2 는 20% 가 test set\n",
+    "\n",
+    "x_train = train.drop(['diagnosis'], axis = 1)\n",
+    "y_train = train.diagnosis\n",
+    "\n",
+    "x_test = test.drop(['diagnosis'], axis = 1)\n",
+    "y_test = test.diagnosis\n",
+    "\n",
+    "print(len(train), len(test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SVM 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM: 91.23\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = svm.SVC(gamma = 'scale')\n",
+    "model.fit(x_train, y_train) # x / y 로 넣어서 모델 핏\n",
+    "\n",
+    "y_pred = model.predict(x_test) # model 검증 \n",
+    "\n",
+    "print('SVM: %.2f' % (metrics.accuracy_score(y_pred, y_test) * 100)) # y pred - y test를 통해 몇 프로인지 확인 \n",
+    "# 악성인지 양성인지 구분할 수 있는 정확도가 91.23 % "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DecisionTreeClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DTC: 86.84\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(x_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(x_test) \n",
+    "\n",
+    "print('DTC: %.2f' % (metrics.accuracy_score(y_pred, y_test) * 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## KNeighborsClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNeighborsClassifier: 92.98\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = KNeighborsClassifier()\n",
+    "model.fit(x_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(x_test) \n",
+    "\n",
+    "print('KNeighborsClassifier: %.2f' % (metrics.accuracy_score(y_pred, y_test) * 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression: 94.74\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = LogisticRegression(solver = 'lbfgs', max_iter=2000)\n",
+    "model.fit(x_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(x_test) \n",
+    "\n",
+    "print('LogisticRegression: %.2f' % (metrics.accuracy_score(y_pred, y_test) * 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier: 93.86\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = RandomForestClassifier(n_estimators=100)\n",
+    "model.fit(x_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(x_test) \n",
+    "\n",
+    "print('RandomForestClassifier: %.2f' % (metrics.accuracy_score(y_pred, y_test) * 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compute feature importances \n",
+    "\n",
+    "어느 feature가 중요한 지 알아내자. 너무 많은 feature가 있어서 .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "perimeter_worst            0.132965\n",
+       "concave points_worst       0.128264\n",
+       "radius_worst               0.126644\n",
+       "concave points_mean        0.102949\n",
+       "area_worst                 0.092281\n",
+       "concavity_mean             0.059928\n",
+       "area_se                    0.058661\n",
+       "perimeter_mean             0.042985\n",
+       "area_mean                  0.041731\n",
+       "radius_mean                0.038502\n",
+       "concavity_worst            0.032473\n",
+       "compactness_mean           0.017562\n",
+       "texture_worst              0.014411\n",
+       "compactness_worst          0.012708\n",
+       "perimeter_se               0.011584\n",
+       "symmetry_worst             0.009540\n",
+       "radius_se                  0.009096\n",
+       "smoothness_worst           0.008678\n",
+       "texture_mean               0.007919\n",
+       "smoothness_mean            0.007834\n",
+       "fractal_dimension_worst    0.007081\n",
+       "smoothness_se              0.006384\n",
+       "compactness_se             0.005109\n",
+       "fractal_dimension_se       0.004645\n",
+       "texture_se                 0.004103\n",
+       "concavity_se               0.003971\n",
+       "fractal_dimension_mean     0.003638\n",
+       "symmetry_se                0.003469\n",
+       "concave points_se          0.002785\n",
+       "symmetry_mean              0.002101\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features = pd.Series(\n",
+    "    model.feature_importances_,\n",
+    "    index=x_train.columns\n",
+    ").sort_values(ascending = False)\n",
+    "\n",
+    "features "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['perimeter_worst', 'concave points_worst', 'radius_worst',\n",
+       "       'concave points_mean', 'area_worst'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 상위 5개 feature만 가지고 다시 모델링\n",
+    "\n",
+    "top_5_features = features.keys()[:5]\n",
+    "\n",
+    "top_5_features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SVM top 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM(Top5): 91.23\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = svm.SVC(gamma = 'scale') \n",
+    "model.fit(x_train[top_5_features], y_train)\n",
+    "\n",
+    "y_pred = model.predict(x_test[top_5_features])\n",
+    "\n",
+    "print('SVM(Top5): %.2f' % (metrics.accuracy_score(y_pred, y_test)*100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Cross validation (Tedius)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.7807017543859649, 0.8947368421052632, 0.9736842105263158, 0.9298245614035088, 0.9380530973451328]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = svm.SVC(gamma = 'scale') \n",
+    "\n",
+    "cv = KFold(n_splits = 5) # n_split 은 몇 개의 iteration ? 알아서 분리해 줌 5개에 split된 데이터로 교차검증 \n",
+    "\n",
+    "accs, scores = [], []\n",
+    "\n",
+    "for train_index, test_index in cv.split(data[top_5_features]):\n",
+    "    x_train = data.iloc[train_index][top_5_features]\n",
+    "    y_train = data.iloc[train_index].diagnosis\n",
+    "    \n",
+    "    x_test = data.iloc[test_index][top_5_features]\n",
+    "    y_test = data.iloc[test_index].diagnosis\n",
+    "    \n",
+    "    model.fit(x_train, y_train)\n",
+    "    \n",
+    "    y_pred = model.predict(x_test)\n",
+    "    \n",
+    "    accs.append(metrics.accuracy_score(y_test, y_pred))\n",
+    "    \n",
+    "print(accs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.78070175 0.89473684 0.97368421 0.92982456 0.9380531 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = svm.SVC(gamma = 'scale')\n",
+    "\n",
+    "cv = KFold(n_splits = 5)\n",
+    "\n",
+    "accs = cross_val_score(model, data[top_5_features], data.diagnosis, cv = cv)\n",
+    "\n",
+    "print(accs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test all models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM: 90.87%\n",
+      "DecisionTreeClassifier: 92.44%\n",
+      "KNeighborClassifier: 88.76%\n",
+      "LogisticRegression: 90.34%\n",
+      "RandomForestClassifier: 93.67%\n"
+     ]
+    }
+   ],
+   "source": [
+    "models = {\n",
+    "    'SVM': svm.SVC(gamma = 'scale'),\n",
+    "    'DecisionTreeClassifier': DecisionTreeClassifier(),\n",
+    "    'KNeighborClassifier': KNeighborsClassifier(),\n",
+    "    'LogisticRegression': LogisticRegression(solver = 'lbfgs', max_iter = 2000),\n",
+    "    'RandomForestClassifier': RandomForestClassifier(n_estimators = 200)\n",
+    "}\n",
+    "\n",
+    "cv = KFold(n_splits = 6)\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    scores = cross_val_score(model, data[top_5_features], data.diagnosis, cv = cv)\n",
+    "    \n",
+    "    print('%s: %.2f%%' % (name, np.mean(scores)*100))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
