machine learning basic coding

--- a/for Practice/machinelearning_prac.ipynb
+++ b/for Practice/machinelearning_prac.ipynb
@@ -2113,6 +2113,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Normalize Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM: 90.87%\n",
+      "DecisionTreeClassifier: 91.39%\n",
+      "KNeighborClassifier: 88.76%\n",
+      "LogisticRegression: 90.34%\n",
+      "RandomForestClassifier: 93.50%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler(feature_range = (0, 1)) # scale을 min - max 0 - 1 로 노멀화 해줌 \n",
+    "scaled_data = scaler.fit_transform(data[top_5_features])\n",
+    "\n",
+    "\n",
+    "models = {\n",
+    "    'SVM': svm.SVC(gamma = 'scale'),\n",
+    "    'DecisionTreeClassifier': DecisionTreeClassifier(),\n",
+    "    'KNeighborClassifier': KNeighborsClassifier(),\n",
+    "    'LogisticRegression': LogisticRegression(solver = 'lbfgs', max_iter = 2000),\n",
+    "    'RandomForestClassifier': RandomForestClassifier(n_estimators = 200)\n",
+    "}\n",
+    "\n",
+    "cv = KFold(n_splits = 6)\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    scores = cross_val_score(model, data[top_5_features], data.diagnosis, cv = cv)\n",
+    "    \n",
+    "    print('%s: %.2f%%' % (name, np.mean(scores)*100))\n",
+    "    \n",
+    "    #엄청 달라지진 않네.."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
